--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -33,7 +33,7 @@
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="#">Home</a></li>
                         <li><a href="@routes.HomeController.logging()">Logging</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="@routes.HomeController.messages()">Messages</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
