--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -19,7 +19,7 @@
         @* And here's where we render the `Html` object containing
          * the page content. *@
         <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
@@ -39,7 +39,7 @@
             </div>
         </nav>
 
-        <div class="container">
+        <div class="container-fluid">
 
             @content
 
